--- a/index.html
+++ b/index.html
@@ -78,17 +78,17 @@ function goBack() {
 							<th style="width: 10%">Tải</th>
 						</tr>
 					</thead>
-					<tbody id="download_table_body"><tr><td><i class="mdui-icon material-icons">mood</i> full.rar</p></td><td><p>Data của OBB Nhật thực</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1joT2M_ga165ygtikloPvtTlU8zYWHuOV/view?usp=drivesdk" download="PDF">
+					<tbody id="download_table_body"><tr><td><i class="mdui-icon material-icons">mood</i> full.rar</p></td><td><p>Data của OBB Nhật thực</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1joT2M_ga165ygtikloPvtTlU8zYWHuOV/view?usp=drivesdk" download="RAR">
 					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
-					<tbody id="download_table_body"><tr><td><p>PACKAGES ELC</p></td><td><p>PACKAGES Nhật thực</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/16Qb_OzDJ0a-umRYi8lmAysI8jPJjwK6-/view?usp=sharing" download="PDF">
+					<tbody id="download_table_body"><tr><td><p>PACKAGES ELC</p></td><td><p>PACKAGES Nhật thực</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/16Qb_OzDJ0a-umRYi8lmAysI8jPJjwK6-/view?usp=sharing" download="ZIP">
 					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
-					<tbody id="download_table_body"><tr><td><p>PACKAGES GT</p></td><td><p>PACKAGES Gờ Tê Không ai chơi</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1h234Oq6rrFh6qty8zlbIfqaxyuXBPtQO/view?usp=sharing" download="PDF">
+					<tbody id="download_table_body"><tr><td><p>PACKAGES GT</p></td><td><p>PACKAGES Gờ Tê Không ai chơi</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1h234Oq6rrFh6qty8zlbIfqaxyuXBPtQO/view?usp=sharing" download="ZIP">
 					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
-					<tbody id="download_table_body"><tr><td><p>GT&ELC</p></td><td><p>2 cái trên</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1IraRy7R2BeRcYOqZm-5E5cF80R4NAyNk/view?usp=sharing" download="PDF">
+					<tbody id="download_table_body"><tr><td><p>GT&ELC</p></td><td><p>2 cái trên</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1IraRy7R2BeRcYOqZm-5E5cF80R4NAyNk/view?usp=sharing" download="ZIP">
 					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
-						<tbody id="download_table_body"><tr><td><p>pp.dat</p></td><td><p>smallpp.dat</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1pa-ImKyTx3JEiR4B4oUjT_VqHMlHUdsk/view?usp=sharing" download="PDF">
+						<tbody id="download_table_body"><tr><td><p>pp.dat</p></td><td><p>smallpp.dat</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1pa-ImKyTx3JEiR4B4oUjT_VqHMlHUdsk/view?usp=sharing" download="DAT">
 					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
-					<tbody id="download_table_body"><tr><td><p>pp9999999.dat</p></td><td><p>mờ ka kít peepee.đạt</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1UDV-WQ5uixLw6XshE5DC6wdlvLeiKv56/view?usp=sharing" download="PDF">
+					<tbody id="download_table_body"><tr><td><p>pp9999999.dat</p></td><td><p>mờ ka kít peepee.đạt</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1UDV-WQ5uixLw6XshE5DC6wdlvLeiKv56/view?usp=sharing" download="DAT">
 					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
 				</table>
 			</div>
