--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ function goBack() {
 							<th style="width: 10%">Tải</th>
 						</tr>
 					</thead>
-					<tbody id="download_table_body"><tr><td><i class="mdui-icon material-icons">mood</i> pvz2_gt.rar</p></td><td><p>Data của OBB Nhật thực</p></td><td><p>21/08/2022</p></td><td><a href="https://drive.google.com/file/d/11S8YT0vO8QccJ2mfJXCPycrPx0HvqMnn/view?usp=sharing" download="RAR">
+					<tbody id="download_table_body"><tr><td><i class="mdui-icon material-icons">mood</i> pvz2_gt.rar</p></td><td><p>Data của OBB GT000</p></td><td><p>21/08/2022</p></td><td><a href="https://drive.google.com/file/d/11S8YT0vO8QccJ2mfJXCPycrPx0HvqMnn/view?usp=sharing" download="RAR">
 					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
 					<tbody id="download_table_body"><tr><td><i class="mdui-icon material-icons">mood</i> full.rar</p></td><td><p>Data của OBB Nhật thực</p></td><td><p>15/08/2022</p></td><td><a href="https://drive.google.com/file/d/1joT2M_ga165ygtikloPvtTlU8zYWHuOV/view?usp=drivesdk" download="RAR">
 					<button class="mdui-btn mdui-btn-icon mdui-ripple"><i class="mdui-icon material-icons">file_download</i>
